gcc/testsuite/rust/rustc/ui/const-generics/adt_const_params/const_param_ty_bad_empty_array.rs
#![allow(incomplete_features)]
#![feature(adt_const_params, unsized_const_params)]

#[derive(PartialEq, Eq)]
struct NotParam;

fn check<T: std::marker::ConstParamTy_>() {}

fn main() {
    check::<[NotParam; 0]>();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

